--- a/clock/index.html
+++ b/clock/index.html
@@ -9,12 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <span id="hours">00</span>
-    <span>:</span>
-    <span id="minutes">00</span>
-    <span>:</span>
-    <span id="seconds">00</span>
-    <span id="session">AM</span>
+    <span id="clock">00</span>
   </div>
 </body>
 </html>
